# RTv1

./: .gitignore  CMakeLists.txt  Makefile  README.md  RTv1  author  draw.c  f_open_cl.c  figures.c  help_functions.c  hit_figures.c  keyboard_control.c  main.c  normal.c  rotate.c  rt.h  vectors.c
inc/: keys.h  read.h  rt.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lenint.c  ft_lstadd.c  ft_lstbackadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+29 more)
minilibx/test/: mlx-test
minilibx_macos/: mlx_int.h  mlx_new_window.h
scene/: cone  cylinder  hall  hall2  map1  scene.h  scene1  scene1.c  scene2  scene2.c  scene3  scene3.c  scene4  scene4.c  scene5  scene5.c  scene6  scene7  scene8  sphere
src/: draw.c  figures.c  help_functions.c  hit_figures.c  keyboard_control.c  main.c  normal.c  parse_object.c  parse_params.c  parse_scene.c  parse_utils.c  read.c  read_utils.c  rotate.c  scene4.c  threads.c  vectors.c
srcs/: glfw_loop.c  main.c  push_key.c  rtv1.h
srcs/init/: app_info_init.c  device_init.c  gpu_props_init.c  init.c  init_vulkan.c  init_window.c  vk_error.c
